RESOLVED FIXED239812
[iOS] unable to start playing audio when device is locked
https://bugs.webkit.org/show_bug.cgi?id=239812
Summary [iOS] unable to start playing audio when device is locked
Eric Carlson
Reported 2022-04-27 09:02:23 PDT
Unable to start playing audio when device is locked.
Attachments
Patch (14.97 KB, patch)
2022-04-27 09:04 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2022-04-27 09:02:42 PDT
Eric Carlson
Comment 2 2022-04-27 09:04:51 PDT
EWS
Comment 3 2022-04-27 13:19:16 PDT
Committed r293530 (250059@main): <https://commits.webkit.org/250059@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458451 [details].
Note You need to log in before you can comment on or make changes to this bug.