Cherry-pick 26e08408d784. rdar://problem/90642648

[iOS] unable to start playing audio when device is locked
    https://bugs.webkit.org/show_bug.cgi?id=239812
    <rdar://90642648>

    Reviewed by Jer Noble.

    Source/WebCore:

    Updated media/audio-session-category.html.

    * platform/audio/cocoa/MediaSessionManagerCocoa.mm:
    (WebCore::MediaSessionManagerCocoa::updateSessionState): Choose the appropriate
    route sharing policy after choosing the audio session category because
    setting MediaPlayback+Default makes a process ineligible for NowPlaying, and starting
    playback in the background will be blocked.

    * platform/audio/mac/AudioSessionMac.h:
    * platform/audio/mac/AudioSessionMac.mm:
    (WebCore::AudioSessionMac::setCategory): Updated for testing.

    * testing/Internals.cpp:
    (WebCore::Internals::routeSharingPolicy const): Added accessor for testing.
    * testing/Internals.h:
    * testing/Internals.idl:

    LayoutTests:

    * media/audio-session-category-expected.txt:
    * media/audio-session-category.html:

    Canonical link: https://commits.webkit.org/250059@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293530 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.739@safari-613-branch