Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm
@@ -164,14 +164,12 @@ void MediaSessionManagerCocoa::updateSessionState()
     if (!DeprecatedGlobalSettings::shouldManageAudioSessionCategory())
         return;
 
-    RouteSharingPolicy policy = RouteSharingPolicy::Default;
     auto category = AudioSession::CategoryType::None;
     if (captureCount || (isPlayingAudio && AudioSession::sharedSession().category() == AudioSession::CategoryType::PlayAndRecord))
         category = AudioSession::CategoryType::PlayAndRecord;
-    else if (hasAudibleAudioOrVideoMediaType) {
+    else if (hasAudibleAudioOrVideoMediaType)
         category = AudioSession::CategoryType::MediaPlayback;
-        policy = RouteSharingPolicy::LongFormAudio;
-    } else if (webAudioCount)
+    else if (webAudioCount)
         category = AudioSession::CategoryType::AmbientSound;
 
     if (category == AudioSession::CategoryType::None && m_previousCategory != AudioSession::CategoryType::None) {
@@ -183,9 +181,11 @@ void MediaSessionManagerCocoa::updateSessionState()
     } else
         m_delayCategoryChangeTimer.stop();
 
-    m_previousCategory = category;
+    RouteSharingPolicy policy = (category == AudioSession::CategoryType::MediaPlayback) ? RouteSharingPolicy::LongFormAudio : RouteSharingPolicy::Default;
 
-    ALWAYS_LOG(LOGIDENTIFIER, "setting category = ", category, ", policy = ", policy);
+    ALWAYS_LOG(LOGIDENTIFIER, "setting category = ", category, ", policy = ", policy, ", previous category = ", m_previousCategory);
+
+    m_previousCategory = category;
     AudioSession::sharedSession().setCategory(category, policy);
 }
 
